Fixed layout issues when schedule selector is expanded. Also made the schedule name scrollable instead of wrap so it doesn't overlap with others.

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -59,4 +59,12 @@ body {
 			border-radius: 8px;
 		}
 	}
+
+	.no-scrollbar {
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+		&::-webkit-scrollbar {
+			display: none;
+		}
+	}
 }
